--- a/src/styles/keyboard.css
+++ b/src/styles/keyboard.css
@@ -15,7 +15,7 @@
     height: 200px;
     width: 50px;
     display: inline-block;
-    background-color: white;
+    background-color: #f5f3ed
 }
 
 .key h1 {
